styles.css
:root {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 16px;

    --header-size: 5rem;
    --footer-size: 2.5rem;
    --library-size: calc(100vh - var(--header-size) - var(--footer-size));

    --main-gap: 2rem;
    --inter-gap: 1.5rem;
    --small-gap: 1rem;

    --book-height: 300px;
    --book-width: 200px;

    --color-main: #2690F5;
    --color-complementary1: #F5C53D;
    --color-complementary2: #F58627;
    --color-background: #fafafa;
    --color-main-shadow: #4D6275;
    --color-complementary1-shadow: #756B4D;
    --color-complementary2-shadow: #75604D;
    --color-background-shadow: #dfdfdf;
}

::backdrop {
    background-color: var(--color-main-shadow);
    opacity: 0.35;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

button {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
}

/*===========*\
| BODY LAYOUT |
\*===========*/
body {
    width: 100vw;
    height: 100vh;

    display: grid;
    grid-template-rows:
        var(--header-size)
        var(--library-size)
        var(--footer-size);

}

/*=============*\
| HEADER LAYOUT |
\*=============*/
.header {
    display:flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    background-color: var(--color-main);
}
.header button {
    height: 50%;
    width: 10rem;

    background-color: var(--color-main);
    border: 3px solid var(--color-background);
    border-radius: 20px;

    color: var(--color-background);
    font-size: 1.25rem;
    font-weight: bold;
}
.header button:hover {
    background-color: var(--color-background);
    color: var(--color-main);
    cursor: pointer;
}
.header button:active {
    background-color: var(--color-background-shadow);
    border-color: var(--color-background-shadow);
}

/*==============*\
| LIBRARY LAYOUT |
\*==============*/
.library {
    background-color: var(--color-background);

    width: 100vw;
    height: var(--library-size);
    padding: var(--main-gap);
    overflow-y: scroll;
    overflow-x: hidden;

    display: grid;
    grid-template-rows: var(--book-height);
    grid-auto-rows: var(--book-height);
    grid-template-columns: repeat(auto-fill, minmax(var(--book-width), 1fr));
    gap: var(--main-gap);
}
.library .book {
    background-color: var(--color-complementary1);
    padding: var(--small-gap);

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    
    border-radius: 1rem;
}
.library .book p {
    margin-left: 1rem;
}
.library .book .buttons {
    width: 100%;
    display: flex;
    justify-content: space-between;
}
#modal button,
.library .book button {
    width: 45%;
    height: 2rem;

    background-color: var(--color-complementary2);
    border: 3px solid var(--color-complementary2);
    border-radius: 1rem;
    
    font-size: 0.9rem;
    font-weight: bold;
}
#modal button:hover,
.library .book button:hover {
    background-color: var(--color-background);
}
#modal button:active
.library .book button:active {
    background-color: var(--color-background-shadow);
}

/*=============*\
| FOOTER LAYOUT |
\*=============*/
.footer {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--color-main);

    font-size: 1rem;
    color: var(--color-background);
}
.footer a {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    
    color: white;
}
.footer a:visited {color: var(--color-complementary1-shadow);}
.footer a:hover {color: var(--color-complementary1);}

/*============*\
| MODAL LAYOUT |
\*============*/
#modal {
    width: clamp(300px, 40vw, 400px);

    position: fixed;
    margin: auto;
    padding: var(--inter-gap);

    border: none;
    border-radius: 1rem;

    background-color: var(--color-complementary1);
}
#modal .modalInsideContainer {
    height: 100%;

    display: flex;
    flex-direction: column;
}
#modal .modalTitle,
#modal .form-inputs {
    margin-bottom: 3rem;
}
#modal form {
    display: flex;
    flex-direction: column;
}
#modal form .form-inputs {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;
}
#modal form .form-inputs > div {
    display: flex;
    flex-direction: column;
    gap: 0.15rem;
}
#modal .title > input,
#modal .author > input,
#modal .pages > input,
#modal .title > input:focus,
#modal .author > input:focus,
#modal .pages > input:focus {
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;

    height: 1.8rem;
    padding: 0.2rem 0.7rem;

    border: none;
    border-radius: 1rem;
    outline: none;

    background-color: var(--color-complementary2);
}
#modal input[type="number"]::-webkit-inner-spin-button,
#modal input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
#modal input[type="number"] {
    -moz-appearance: textfield; /* Firefox */
}
#modal .read input {
    background-color: var(--color-complementary2);
    accent-color: var(--color-complementary2);
}
#modal form .form-inputs > div.read {
    flex-direction: row;
    gap: .5rem;
}
#modal .requiredWarning {
    font-size: 0.9rem;
    margin-bottom: 0.5rem;
}
#modal .button-container {
    display: flex;
    justify-content: space-around;
}
#modal .modalTitle,
#modal label {
    font-weight: bold;
}
#modal .modalTitle {
    font-size: 1.35rem;
    text-align: center;
    background-color: var(--color-complementary2);
    padding: 0.5rem 0.2rem;
    border-radius: 1rem;
}
#modal label {
    font-size: 1rem;
}





/* TESTING */

#modalTest {
    height: 1.5rem;
    width: 4rem;

    position: fixed;
    top: 1.75rem;
    right: 0.5rem;
}

#test {
    height: 1.5rem;
    width: 4rem;

    position: fixed;
    bottom: 0.5rem;
    right: 0.5rem;
}

